Notifications: port VS Code's NotificationsModel
Replaces four ad-hoc signals (onDidNotify, onDidRepeat, onDidClear,
onDidChangeUnread-for-list-changes) with one typed change event, which
is how both references model the notification list: VS Code's
onDidChangeNotification carries {kind, index, item} and feeds both
NotificationsToasts and NotificationsCenter from one model.

Ported from vs/workbench/common/notifications.ts.

The missing kind was REMOVED, and its absence was a live bug. The
history is bounded at 100, so the oldest is dropped once it is full --
but with only "something arrived" and "everything went" to announce, an
eviction was unannouncable. NotificationsView could only ever append, so
past the limit the panel kept showing cards for notifications the model
had already thrown away and the column grew without bound. That was not
a view defect: there was no way for the view to find out.

CLEARED is its own kind rather than 100 REMOVEDs, so a view rebuilds an
empty column once instead of splicing every card out individually.

onDidChangeUnread stays separate. Marking everything read alters no
entry, and a view that redrew its column on it would repaint for
something only the bell can see.

Notifications.size()/isEmpty() added: refreshEmptyState() asked
history().isEmpty(), and history() copies the whole list -- so a full
history allocated a 100-element copy per arrival to find out it was not
empty.

NotificationCard is now an element that owns its parts, not a static
builder returning an opaque tree. Both consumers had been finding their
way back in through the selector engine -- a querySelector(".__message__")
per repeat, matching on a CSS class as though from outside, and both then
had to cope with it returning null. A repeat is now a setText. It also
retires the one-element-array trick the balloon layer used to give a
close button a reference to the card being constructed.

Balloons: the ticker no longer leaks. UIWindow drops a ticker only when
tickFr