@@ -2,8 +2,7 @@ package com.crystalgui.core.notify;
 
 import com.crystalgui.core.signal.Signal;
 
-import java.util.ArrayDeque;
-import java.util.Deque;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -23,6 +22,14 @@ import java.util.List;
  * {@link com.crystalgui.core.command.CommandRegistry} and
  * {@code InspectorRegistry} already make. {@code register(workbench)} now needs nothing else.</p>
  *
+ * <h3>The history is the model, and it announces itself with one event</h3>
+ *
+ * <p>Both references keep the notification list as a single observable collection that emits typed
+ * changes, and hang every view off it — VS Code's {@code NotificationsModel} feeds both its toasts and its
+ * notification centre from one {@code onDidChangeNotification}. {@link #onDidChange} is that event; see
+ * {@link NotificationEvent} for why the four separate signals it replaced could not express an eviction,
+ * and what that cost.</p>
+ *
  * <h3>Not the status bar</h3>
  *
  * <p>{@link StatusBar} is the other half and they are deliberately separate. A notification is an
@@ -31,6 +38,14 @@ import java.util.List;
  * shader graph produces both: a compile failure is an event, and "line 42 came from Multiply" is ambient
  * and fires on every caret move. Routed through one channel, the second buries the first within seconds.
  * VS Code separates them for this reason and so does every editor that has both.</p>
+ *
+ * <h3>Known gap: there is no handle</h3>
+ *
+ * <p>VS Code's {@code notify()} returns an {@code INotificationHandle} carrying {@code close()},
+ * {@code updateMessage()} and a progress sink, and IntelliJ's {@code Notification} has {@code expire()}.
+ * Ours is fire-and-forget, so nothing can revise or withdraw what it said. Deliberately not added on
+ * speculation: no producer here needs it yet, and an API with no consumer is the thing that has to be
+ * kept working for years before anyone finds out whether it was the right shape.</p>
  */
 public final class Notifications {
 
@@ -38,30 +53,12 @@ public final class Notifications {
     }
 
     /**
-     * Something happened. Connect to display it.
+     * The history changed. One channel, typed by {@link NotificationEvent.Kind}.
      *
      * <p>Nothing is displayed by default, deliberately: a core that drew its own toast would be deciding
      * a piece of application layout, and there is no window here to draw it in.</p>
      */
-    public static final Signal.Value<Notification> onDidNotify = new Signal.Value<>();
-
-    /**
-     * The history was emptied — "Clear all".
-     *
-     * <p>Separate from {@link #onDidNotify} because a view cannot infer it: nothing arrived, so there is
-     * no notification to hand over, and a view watching only arrivals would keep showing a list the user
-     * has just dismissed.</p>
-     */
-    public static final Signal.Action onDidClear = new Signal.Action();
-
-    /**
-     * The same message arrived again — its {@link Notification#getRepeats()} has gone up.
-     *
-     * <p>A separate channel from {@link #onDidNotify} because a view must do something different with it:
-     * the notification is one it is already showing, so it updates that card rather than adding another. A
-     * repeat delivered as an arrival is precisely the flood this collapse exists to stop.</p>
-     */
-    public static final Signal.Value<Notification> onDidRepeat = new Signal.Value<>();
+    public static final Signal.Value<NotificationEvent> onDidChange = new Signal.Value<>();
 
     /**
      * How many have arrived since the user last looked — what the bell's badge shows.
@@ -69,21 +66,30 @@ public final class Notifications {
      * <p>Read state is the view's fact rather than the notification's: the <em>same</em> message is unread
      * until someone opens the panel, and which panel that is has nothing to do with what happened. Kept
      * here rather than per-notification for that reason, and because the badge only ever needs a count.</p>
+     *
+     * <p>Separate from {@link #onDidChange} because it is not a change to the <em>list</em>: marking
+     * everything read alters no entry, and a view that redrew its column on it would be repainting for
+     * something that only the bell can see.</p>
      */
     public static final Signal.Value<Integer> onDidChangeUnread = new Signal.Value<>();
 
     private static int unread;
 
     /**
-     * The last {@value #HISTORY_LIMIT}, newest last.
+     * The last {@link #HISTORY_LIMIT}, oldest first.
      *
      * <p>Bounded because it is a convenience, not a log. The value that matters is that a message which
      * arrived while the user was looking elsewhere is still findable — the single most common complaint
      * about a status line, and the reason IntelliJ's event log exists.</p>
+     *
+     * <p>A list rather than a deque so an entry has an <b>index</b>, which is what
+     * {@link NotificationEvent} carries. Removing from the front shifts, and at a hundred short entries
+     * that is not worth a data structure.</p>
      */
-    private static final Deque<Notification> HISTORY = new ArrayDeque<>();
+    private static final List<Notification> HISTORY = new ArrayList<>();
 
-    private static final int HISTORY_LIMIT = 100;
+    /** How many are kept. The oldest is dropped past this, announced as {@link NotificationEvent.Kind#REMOVED}. */
+    public static final int HISTORY_LIMIT = 100;
 
     public static void info(String message) {
         show(Notification.info(message));
@@ -113,16 +119,22 @@ public final class Notifications {
      */
     public static void show(Notification notification) {
         if (notification == null) return;
-        Notification newest = HISTORY.peekLast();
+        Notification newest = HISTORY.isEmpty() ? null : HISTORY.get(HISTORY.size() - 1);
         if (notification.saysTheSameAs(newest)) {
             newest.markRepeated();
-            onDidRepeat.emit(newest);
+            onDidChange.emit(NotificationEvent.changed(newest, HISTORY.size() - 1));
             return;
         }
-        HISTORY.addLast(notification);
-        while (HISTORY.size() > HISTORY_LIMIT) HISTORY.removeFirst();
+        HISTORY.add(notification);
+        // EVICTION IS ANNOUNCED. Silently dropping the oldest is what let the panel's column outgrow the
+        // history it was showing -- see NotificationEvent. Emitted BEFORE the arrival so a view applies the
+        // changes in the order they happened, and never briefly holds more than the model does.
+        while (HISTORY.size() > HISTORY_LIMIT) {
+            Notification dropped = HISTORY.remove(0);
+            onDidChange.emit(NotificationEvent.removed(dropped, 0));
+        }
         unread++;
-        onDidNotify.emit(notification);
+        onDidChange.emit(NotificationEvent.added(notification, HISTORY.size() - 1));
         onDidChangeUnread.emit(unread);
     }
 
@@ -153,8 +165,24 @@ public final class Notifications {
         if (HISTORY.isEmpty() && unread == 0) return;
         HISTORY.clear();
         unread = 0;
-        onDidClear.emit();
+        onDidChange.emit(NotificationEvent.cleared());
         onDidChangeUnread.emit(0);
+    }
+
+    /** How many are held. @see #isEmpty() */
+    public static int size() {
+        return HISTORY.size();
+    }
+
+    /**
+     * Whether anything is held.
+     *
+     * <p>Here rather than left to {@code history().isEmpty()} because that copies the whole list to answer
+     * a question about its size — and the empty-state check runs on <em>every</em> arrival, so a full
+     * history allocated a hundred-element copy per notification to find out it was not empty.</p>
+     */
+    public static boolean isEmpty() {
+        return HISTORY.isEmpty();
     }
 
     /** Oldest first. A copy, so a consumer cannot edit the history it is reading. */
@@ -166,9 +194,7 @@ public final class Notifications {
     public static void resetForTesting() {
         HISTORY.clear();
         unread = 0;
-        onDidNotify.disconnectAll();
-        onDidClear.disconnectAll();
-        onDidRepeat.disconnectAll();
+        onDidChange.disconnectAll();
         onDidChangeUnread.disconnectAll();
     }
 }
